정규표현식

--- a/1_HTML/03_이미지및멀티미디어태그.html
+++ b/1_HTML/03_이미지및멀티미디어태그.html
@@ -13,7 +13,7 @@
     <!-- new extension program : live server-->
     <img src="../resources/city.jpg" alt="이 사진은 도시 사진입니다." />
 
-    <!-- 주소가 잘못됐을 경우 사진파일 설명이 뜸-->>
+    <!-- 주소가 잘못됐을 경우 사진파일 설명이 뜸 -->
     <img src="../city.jpg" alt="이 사진은 도시 사진입니다." />
 
     <h3>width와 height 속성</h3>
