--- a/2_CSS/실습문제2-3.html
+++ b/2_CSS/실습문제2-3.html
@@ -4,159 +4,124 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/실습문제2-3.css" />
+    <link rel="stylesheet" href="../2_CSS/css/reset.css" />
+    <link rel="stylesheet" href="../2_CSS/css/실습문제2-3.css" />
   </head>
   <body>
     <header>
-      <div class="header-blackbox"></div>
-      <div class="header-content">
-        <h1>LOGO</h1>
-        <nav>
-          <a href="">Menu 1</a>
-          <a href="">Menu 2</a>
-          <a href="">Menu 3</a>
-          <a href="">Menu 4</a>
-          <a href="">Menu 5</a>
-        </nav>
-      </div>
+      <div class="blackbox"></div>
+      <h2>LOGO</h2>
+      <nav>
+        <a href="#">Menu1</a>
+        <a href="#">Menu2</a>
+        <a href="#">Menu3</a>
+        <a href="#">Menu4</a>
+        <a href="#">Menu5</a>
+      </nav>
     </header>
     <main>
-      <section>
-        <h2>Lorem Ipsum</h2>
-      </section>
-      <img src="../resources/content_720.jpg" alt="" />
-      <section>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, id,
-          sunt culpa velit dolor magni unde iure facere voluptatum rem nulla!
-          Quia id officiis, similique eius labore quis nostrum dolorem. Ratione
-          minus autem consectetur, labore sunt aspernatur reprehenderit neque,
-          voluptatum dolores, maxime ipsum! Harum dicta eaque expedita
-          repudiandae ipsa perspiciatis porro molestiae totam, officiis ab
-          impedit qui. Vitae, repudiandae officia. Excepturi, ut delectus.
-          Provident similique reiciendis veniam repellendus corporis obcaecati
-          perspiciatis magni placeat accusantium molestiae! Illo nam id
-          doloribus natus deleniti facere! Aut neque minima esse cumque. Minima,
-          harum inventore. Error totam inventore blanditiis provident doloremque
-          pariatur maiores placeat dolore corporis esse voluptatem aut
-          perferendis necessitatibus dolorem, eum dolorum ab modi iure ipsa quod
-          beatae ducimus aliquid! Ratione, illum ipsam. Reiciendis beatae vero
-          omnis cumque, debitis consectetur soluta facere consequuntur corrupti,
-          quibusdam rem asperiores nesciunt voluptate, delectus sapiente optio
-          non explicabo unde! Labore maxime animi fugiat reiciendis veniam
-          recusandae sint. Lorem, ipsum dolor sit amet consectetur adipisicing
-          elit. Expedita cupiditate eos consequuntur sit, ipsa alias doloribus,
-          officiis necessitatibus minima atque fuga voluptas numquam, veniam
-          rerum modi! Ut nisi voluptate quos? Ex perferendis facere ea aut alias
-          distinctio vitae voluptas quaerat aspernatur, voluptatem quas commodi
-          quisquam doloremque nulla asperiores, at officia officiis deleniti
-          earum inventore beatae dolore quos eos. Hic, blanditiis. Dicta nisi
-          dolorum et placeat ratione beatae soluta amet aliquam blanditiis hic
-          totam earum neque doloremque, quis dignissimos dolorem quam cum ea
-          saepe. Doloribus distinctio tempore nesciunt, illum corrupti qui? Quae
-          itaque aspernatur molestias dolorem numquam? Perspiciatis voluptas
-          sint doloremque? Blanditiis, molestiae aliquid accusantium omnis modi
-          commodi deserunt ut. Quis nisi provident non, suscipit ea nam mollitia
-          nostrum aperiam totam! Expedita ducimus dolor eveniet ratione facilis,
-          corporis vitae ad alias quam. Inventore culpa eos perspiciatis tempora
-          similique, maxime modi maiores quis mollitia atque. Ipsa voluptatum
-          magni fuga quisquam, voluptates dolor. Fugit, accusamus. Repellat
-          ratione doloribus quis voluptatibus impedit rem. Alias minima quasi
-          voluptas ipsum numquam eius sapiente cupiditate totam recusandae
-          animi? Laborum, delectus dolore nesciunt quis nihil magnam ad totam.
-          Ad necessitatibus eius corrupti quisquam voluptates est optio
-          doloribus? Ea voluptate ducimus illo eum nam, maiores repellat, quis
-          aliquid libero facere ex id exercitationem, doloribus maxime! Pariatur
-          totam quo illo. Vel saepe, voluptatibus sequi perspiciatis obcaecati
-          ratione libero. Qui obcaecati eaque maiores laborum fugit earum id
-          adipisci mollitia illo? Rerum sapiente quisquam quidem, eligendi
-          repellendus laborum perferendis. Beatae, voluptas itaque? Aperiam qui
-          voluptates, eos dolor totam autem maiores temporibus dolores. Quas
-          debitis perferendis, temporibus ea cum quod iure numquam consequatur
-          voluptatem officia, at laboriosam, dicta maiores et dolor nulla error.
-          At tempore quos, maiores saepe iste ducimus veritatis in pariatur
-          magnam nihil adipisci alias exercitationem quis obcaecati minima
-          cumque minus sapiente possimus dolore recusandae? Mollitia illo
-          perferendis sunt necessitatibus natus? Quo tempore animi blanditiis
-          perferendis dolorem. Dolor dicta aut praesentium ullam doloremque et
-          necessitatibus tempora nesciunt ab temporibus corporis, ducimus totam
-          voluptatem quidem earum porro assumenda, vel placeat. Blanditiis,
-          ipsa. Blanditiis itaque ipsam veniam eos magnam debitis quam ut a
-          recusandae! Ab eos vero quibusdam perspiciatis nesciunt est ratione
-          aliquid, praesentium ea. Aut facere in architecto perspiciatis
-          consectetur. Nobis, praesentium? Temporibus voluptates doloribus error
-          veritatis totam cumque, facilis quam quia velit quis, dolores aut
-          suscipit sequi, libero reprehenderit inventore quos officiis at
-          corrupti necessitatibus? Inventore doloribus officiis error molestias
-          expedita. Nesciunt reiciendis atque, ipsum in quam amet incidunt odit
-          tenetur nobis, quibusdam enim aliquam inventore. Tempore, assumenda
-          optio beatae minus praesentium repudiandae, modi error at ut debitis
-          hic, sunt ipsa! Incidunt earum vero aut nemo quod similique. Porro
-          quos corrupti nisi dolores, eveniet doloribus pariatur dicta odit
-          accusantium rem quam hic iusto, ut voluptatibus iste id adipisci
-          aperiam quis itaque. Consectetur voluptas vel fugit dignissimos, amet
-          minus vero pariatur consequatur, enim ut nihil exercitationem dolor
-          quae cum magni laudantium! Hic, dignissimos? Repudiandae dignissimos
-          facilis ex deleniti, ratione quas nemo inventore. Illum doloribus,
-          sapiente, obcaecati officia aliquid temporibus, totam eaque
-          repudiandae facilis distinctio excepturi! Exercitationem, officia.
-          Similique soluta odit itaque ipsam tempora nisi, deleniti facere error
-          fugiat! Natus perspiciatis inventore repellat! Doloribus, ducimus
-          quos. Eveniet, quisquam nihil non atque, nam quaerat velit eos
-          reiciendis corrupti aspernatur distinctio ex ullam aliquam numquam
-          incidunt vel laboriosam adipisci sed blanditiis accusamus repellendus
-          ducimus qui. Praesentium voluptatem labore voluptate aliquam
-          aspernatur, quo commodi tempore quae rem assumenda autem ducimus,
-          nesciunt velit ullam! Explicabo beatae laboriosam minus, quibusdam
-          ducimus dicta labore dolorem, inventore non nostrum aspernatur.
-          Debitis qui officia dicta! Id dicta animi, amet error doloremque
-          voluptas, nisi libero perferendis voluptatem inventore, voluptates
-          doloribus repellendus odio assumenda minus. Atque voluptatibus commodi
-          vitae odio sunt doloribus non. Iusto veniam voluptatibus dolore
-          assumenda! Nam repudiandae beatae quod distinctio ab hic, nesciunt
-          debitis fugiat veritatis ipsa ipsum et vel consequuntur. Error
-          adipisci, placeat delectus perspiciatis sapiente consectetur inventore
-          dolor? Voluptates autem nisi voluptate fugit, fuga expedita
-          praesentium quis quasi illum. Consequatur vitae minus accusamus eaque
-          illum ex aut vel maiores quo ratione asperiores dolorem repellendus
-          atque, quam quia. Explicabo. Ratione quis saepe facilis cupiditate
-          nostrum sapiente nemo rem laudantium explicabo harum ab aut quod
-          suscipit sit molestias ea vel, magni recusandae nam tenetur laborum
-          distinctio reiciendis consequuntur? Fuga, dolorem! Obcaecati ducimus,
-          alias quasi quaerat laborum repudiandae officia ipsum natus suscipit
-          quod similique? A, eligendi sed et voluptatibus dicta excepturi
-          dolores sint quam praesentium, fuga quos delectus nisi laborum. Quia!
-          Impedit autem dolorum, architecto laborum, perspiciatis et eum
-          voluptate dolores quisquam obcaecati ullam consequatur saepe, vitae
-          eligendi aliquam reprehenderit nisi eaque reiciendis quo officiis
-          magni labore necessitatibus rem! Inventore, atque! Laborum quibusdam
-          repellendus minus numquam ex eum necessitatibus doloribus qui error.
-          Perspiciatis, recusandae quisquam quis optio quas tempore facere
-          nostrum animi itaque similique, sint adipisci repellendus quibusdam
-          provident. Delectus, rerum. Id, illum et veritatis cum iure, delectus
-          assumenda aut repudiandae, earum dolorem architecto. Quos eveniet a
-          ratione maxime molestiae laudantium quod nostrum autem similique
-          ipsum, sequi laborum deserunt possimus illum? Fugit doloremque, ullam
-          quasi ex aspernatur voluptate asperiores corrupti officia odit
-          accusantium molestiae est. Eaque obcaecati facere tempora temporibus
-          quae earum optio inventore nobis, facilis, distinctio debitis vero
-          consequuntur esse! Tenetur odit cum quasi, eligendi officia earum
-          soluta, voluptatum reprehenderit nobis, iste animi adipisci porro
-          aliquam eaque provident sapiente maxime quaerat molestias ad id rerum
-          consequuntur dignissimos aspernatur? Natus, labore. Fuga repellendus
-          dignissimos provident, nisi nostrum nulla eius mollitia nam suscipit
-          quis quidem odio modi omnis culpa eligendi similique incidunt voluptas
-          deleniti assumenda tenetur, quasi facere. Repellat temporibus autem
-          provident. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Ipsam dolor, facilis quasi ratione voluptas expedita officia est
-          saepe, deleniti aliquam unde dolorem qui doloribus aspernatur
-          assumenda fugit reprehenderit eius ullam. Harum labore, ipsam
-          quisquam, ab perferendis sed eaque omnis tempora soluta minima
-          incidunt culpa aut qui. Nulla, consequatur! Expedita iste illo
-          molestias! Natus doloremque error rerum sit delectus illo numquam?
-        </p>
-      </section>
+      <h2>Lorem Ipsum</h2>
+      <img src="../resources/city.jpg" alt="" />
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam minima
+        incidunt nostrum, debitis minus cum exercitationem provident, error
+        iusto, molestiae dolor. Ipsa quos in voluptatum officia quia eligendi
+        distinctio possimus. Alias voluptas error expedita fugiat quaerat, totam
+        animi voluptatibus qui quis facilis aperiam modi, consectetur, beatae
+        ut. Animi, nulla veniam amet distinctio reprehenderit id atque quo
+        similique culpa tenetur ipsum! Doloribus dolor aut nam, laudantium
+        eligendi explicabo sint culpa doloremque eius natus deleniti consequatur
+        quo expedita eaque? Dolorum minus ab eaque architecto repellat quidem
+        inventore facere, molestias placeat accusamus saepe? Officiis a iste
+        iure officia accusamus, quisquam, numquam, architecto nisi ea quos
+        aliquid corporis eligendi quo unde nostrum inventore impedit error
+        laborum exercitationem. Perferendis esse aliquam itaque aperiam quia
+        facere! Obcaecati accusamus labore dolores nihil officia eveniet. Eum
+        aperiam mollitia alias necessitatibus rerum unde, sit accusantium
+        dolorum nobis libero magnam illum iure omnis aut natus tenetur sunt quo?
+        Nemo, enim. Sint necessitatibus quos rerum doloribus modi, vitae esse,
+        voluptates facilis est iste quod quibusdam adipisci eligendi itaque quae
+        repellendus aspernatur omnis asperiores, nam illum sequi nobis eveniet
+        laborum. Quae, fugit? Natus at eligendi eaque voluptatum? Aperiam
+        deleniti vitae tempora neque sunt maiores, maxime fuga, mollitia
+        aspernatur ex doloribus itaque? Magni debitis nemo, ea voluptas
+        similique rerum dolorum animi dolores ipsam. Explicabo aut deserunt
+        temporibus laboriosam vero ipsam aperiam dolores eum. Eum placeat
+        quaerat, tempora aperiam vel ex iure, sint voluptatem maiores, quam
+        atque. Cupiditate nesciunt magnam beatae eveniet, voluptatem placeat.
+        Perspiciatis in incidunt eligendi nam vitae, aspernatur beatae cum eaque
+        ipsa explicabo reprehenderit cumque, ducimus accusantium error molestiae
+        a. Eveniet velit eaque omnis aliquid rerum incidunt, ad illo laboriosam
+        quidem. Voluptate id vero dolore reiciendis repellendus quo enim,
+        aperiam cumque earum ab sunt ipsam non porro rerum fugiat placeat nulla
+        suscipit, itaque sequi, debitis omnis? Maiores perspiciatis quis
+        sapiente aperiam? Quo, pariatur temporibus magnam labore nemo ex
+        cupiditate ratione nostrum fuga sapiente rerum, ullam rem quisquam
+        perferendis minima dolorem quia aliquam facere modi porro maxime facilis
+        inventore alias architecto. Magnam! Laborum quas porro molestiae eum
+        praesentium quasi non alias reiciendis quos iusto. Dicta magni error
+        voluptatem cum corporis excepturi earum, ratione sunt, veniam sequi rem,
+        ad reiciendis natus nobis commodi. Fuga aperiam praesentium soluta
+        dolore voluptate sapiente excepturi consectetur dolor numquam
+        consequuntur reiciendis commodi cum, neque, impedit quam beatae
+        inventore sint. Accusantium quam, est aut temporibus magni
+        exercitationem dolorum harum. Quidem eligendi maxime illo labore
+        inventore, dolorum reprehenderit porro, ratione delectus iure enim
+        recusandae esse amet beatae quo rerum tempora ad laboriosam magnam nobis
+        tempore vel fugiat voluptas? Mollitia, tenetur? Eos aliquid aspernatur
+        saepe aliquam dolorem vitae repudiandae, corporis, iste eum, tempora
+        temporibus sint ipsa ipsam aperiam voluptatibus perferendis asperiores
+        assumenda architecto sit ab? Consequatur obcaecati ipsam nihil
+        asperiores necessitatibus? Error maxime sunt sed minus, deserunt ut! Ab
+        alias maiores eaque? Nihil, facilis amet magnam sequi rem voluptatibus
+        corrupti sit nesciunt similique eveniet aliquid adipisci alias! Corporis
+        maxime ullam laboriosam! Ipsum optio veniam ullam dicta mollitia nam
+        adipisci odit, amet nesciunt. Voluptatum provident, dolorum ea deleniti
+        assumenda maxime, molestiae soluta incidunt ducimus obcaecati molestias
+        harum. Placeat officiis excepturi hic laudantium! Omnis temporibus a
+        assumenda iste, voluptatem dolore animi similique quibusdam voluptas.
+        Assumenda laborum veritatis nam rerum, magnam illo et vitae sed soluta
+        fugiat similique, sint recusandae possimus non deserunt. Laudantium! Qui
+        consequuntur, odio sit error aliquam expedita iure quos reprehenderit in
+        optio nemo, corrupti nihil, temporibus quis animi magnam assumenda
+        possimus voluptate voluptatibus eveniet nostrum. Minima, dolorem
+        veritatis? Placeat, harum. Hic iusto quae autem odit ipsum quibusdam
+        quasi voluptatem, nobis quod vero placeat nemo beatae assumenda
+        molestiae illo consectetur provident earum aperiam tempora libero
+        tenetur culpa! Sapiente hic iusto delectus. Doloribus ex eligendi
+        placeat minus quod nemo dolorem accusantium delectus iure eos, magnam
+        nobis, tempore quasi quidem in amet quisquam quis! Rerum, unde dolore.
+        Quo sed sunt ratione autem provident. Fugiat, harum quod. Consequuntur
+        optio neque tempora quis mollitia distinctio saepe sequi necessitatibus
+        illum placeat consequatur id pariatur, facere alias sint perspiciatis
+        incidunt reprehenderit. Quas et optio odit earum necessitatibus. Illo
+        placeat, modi accusantium pariatur eos quo. Nihil unde iusto vel? Culpa
+        necessitatibus voluptatum adipisci debitis velit odio, facilis
+        recusandae deleniti aspernatur obcaecati quam placeat rem, modi dicta
+        suscipit a? Numquam sint aliquam culpa, deleniti ullam ad quidem earum
+        facere fuga nobis molestiae exercitationem, accusamus, vitae autem.
+        Voluptatibus rerum facere libero, quae harum et dolorem, esse error
+        inventore nam quos? Recusandae debitis, dolorum alias placeat, unde
+        impedit perferendis quo cupiditate sequi, quos praesentium tempora.
+        Aperiam nobis voluptatem, autem cupiditate id officiis quaerat
+        praesentium rerum officia quod neque velit quos incidunt. Iure in,
+        laudantium expedita dolores obcaecati, tempore sit officia esse nesciunt
+        rerum aliquid id error voluptatibus eveniet voluptas dolorem, eos saepe
+        cupiditate. Possimus quia nisi voluptatem aut tempora, doloremque ad?
+        Recusandae, officiis. Libero eligendi hic ullam consequuntur! Dolore
+        esse perferendis sequi vero quisquam, distinctio nobis placeat quam
+        molestias laboriosam. Deserunt itaque iusto beatae at, illo accusamus
+        natus exercitationem molestiae voluptatum! Accusamus id quod earum, sit
+        illum dolor labore cupiditate omnis accusantium tempora, incidunt
+        delectus animi fugit fugiat deserunt aut dicta? Voluptatum accusantium
+        quod cum laudantium ipsa obcaecati impedit unde voluptatibus. Optio
+        dolorem numquam aliquam mollitia aut labore error perferendis eaque
+        iure, id a, aperiam esse odit dolorum eum ullam nostrum alias odio?
+        Nulla dolores officia inventore iusto, possimus ipsum nam. Fugit vitae
+        error debitis et quae quos exercitationem hic aperiam recusandae modi
+        quibusdam, nesciunt eos, nobis deserunt voluptas magnam repudiandae
+        consequuntur facere sit omnis nostrum laborum. Ipsa nostrum sed eius.
+      </p>
     </main>
   </body>
 </html>
