--- a/3_JavaScript/Object/실습문제3-2-4.html
+++ b/3_JavaScript/Object/실습문제3-2-4.html
@@ -3,156 +3,71 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>이것만이라도습득하자</title>
+    <link rel="stylesheet" href="../../2_CSS/css/reset.css" />
     <style>
-        body{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 90vh;
-        }
-        form{
-            border: 1px solid #ccc;
-            padding: 8px;
-        }
-        form div{
-            margin-bottom: 10px;
-        }
-        form span {
-            display: block;
-            color: #999;
-            margin-left: 12px;
-        }
+      body {
+        display: flex;
+        justify-content: center;
+      }
+      form {
+        border: 2px solid rgb(190, 186, 186);
+        margin-top: 10px;
+      }
+      form div {
+        padding: 8px;
+      }
+      form div p {
+        color: #999;
+        padding-top: 5px;
+      }
+      form button {
+        margin: 6px;
+      }
     </style>
-    <link rel="stylesheet" href="css/실습문제3-2-4.css" />
   </head>
   <body>
-    <form action="">
-        <div>
-            <label for="userId">* 아이디</label>
-            <input type="text" id="userId" name="UserId">
-            <span>첫글자는 반드시 영문자로, 그리고 영문자, 숫자 포함하여 총4~12자로 입력하시오.</span>
-        </div>
-        <div>
-            <label for="userPwd">* 비밀번호</label>
-            <input type="password" name="userPwd" id="userPwd">
-            <span>영문자, 숫자, 특수문자 포함하여 총 8~15자로 입력하시오.</span>
-        </div>
-        <div>
-            <label for="userPwdCheck">* 비밀번호 확인</label>
-            <input type="password" id="userPwdCheck">
-            <span>위의 비밀번호와 일치하게 입력하시오.</span>
-        </div>
-        <div>
-            <label for="userName">* 이름</label>
-            <input type="text" id="userName" name="userName">
-            <span>한글로만 이루어져야되며 2글자이상으로 입력하시오.</span>
-        </div>
-        <div>
-            <label for="email">* 이메일</label>
-            <input type="text" id="email" name="email">
-            <span>이메일 형식에 맞춰서 입력하시오</span>
-        </div>
-        <div>
-            <label for="hobby">* 취미</label>
-            <input type="text" name="hobby" id="hobby" placeholder="축구, 농구, 야구, 독서 등">
-        </div>
-        <div>
-            <label for="addr">* 거주지</label>
-            <select name="addr" id="addr">
-                <option value="seoul">서울</option>
-                <option value="gyeonggi">경기</option>
-                <option value="incheon">인천</option>
-            </select>
-        </div>
-        <button type="submit">회원가입</button>
-        <button type="reset">취소</button>
+    <form action="submit">
+      <div>
+        <label for="userid">* 아이디</label>
+        <input type="text" class="userid" name="userid" />
+        <p>첫글자는 반드시 영문자로, 그리고 영문자, 숫자 포함 총4~12자입력</p>
+      </div>
+      <div>
+        <label for="userpwd">* 비밀번호</label>
+        <input type="password" class="userpwd" id="userpwd" />
+        <p>영문자, 숫자, 특수문자포함 8~15글자</p>
+      </div>
+      <div>
+        <label for="userpwdcheck">* 비밀번호확인</label>
+        <input type="password" class="userpwdcheck" name="userpwdcheck" />
+        <p>위의 비밀번호 재확인</p>
+      </div>
+      <div>
+        <label for="">* 이름</label>
+        <input type="text" />
+        <p>한글로만 이루어져야됨. 2글자이상 입력</p>
+      </div>
+      <div>
+        <label for="">* 이메일</label>
+        <input type="text" />
+        <p>이메일입력</p>
+      </div>
+      <div>
+        <label for="">* 취미</label>
+        <input type="text" />
+      </div>
+      <div>
+        <label for="">* 거주지</label>
+        <select name="" id="">
+          <option value="">Kroea</option>
+          <option value="">U.S.</option>
+          <option value="">Japan</option>
+        </select>
+      </div>
+      <button type="submit">회원가입</button>
+      <button type="reset">취소</button>
     </form>
-
-      <script>
-        function userIdCheck() {
-            const regExp = /^[a-zA-Z][a-zA-Z0-9]{3,11}$/;
-            return regExp.test(userId.value);
-        }
-        function userPwdCheck1(){
-            /^[!-~]{8,15}$/;
-            return regExp.test(user.Pwd.value)
-        }
-
-        function userPwdCheck2() {
-            return userPwd.value === userPwdCheck.value;
-        }
-
-        function emailCheck() {
-            const regExp = /^\w+@\w+\.\w$/;
-        }
-        const userIdResult = document.querySelector("#userId + span");
-
-            //여기저기 쓰이는 공통함수 만들기
-        function inputHandler(e, check, message) {
-            const regExp = /^[!-~]{8,15}$/;
-            //console.log(regExp.test(userPwd.value));
-            if (regExp.test(e.target.value)) {
-                e.target.nextElementSibling.style.color = "green";
-                e.target.nextElementSibling.innerHTML = "OK!"
-            } else {
-                e.target.nextElementSibling.style.color = "red";
-                e.target.nextElementSiblingt.innerHTML = "영문자, 숫자, 특수문자 포함하여 총 8~15자로 입력하시오.";
-            }
-        };
-        
-        userId.addEventListener("input", function(e){
-            inputHandler(e, /^[a-zA-Z][a-zA-Z0-9]{3,11}$/,"첫글자는 반드시 영문자로, 그리고 영문자, 숫자 포함하여 총4~12자로 입력하시오." )
-            console.log(e.target.value)
-            //console.log(userId.value)
-            const regExp = /^[a-zA-Z][a-zA-Z0-9]{3,11}$/;
-            //console.log(regExp.test(userId.value));
-            if (regExp.test(userId.value)) {
-                userIdResult.style.color = "green";
-                userIdResult.innerHTML = "OK!"
-            } else {
-                userIdResult.style.color = "red";
-                userIdResult.innerHTML = "첫글자는 반드시 영문자로, 그리고 영문자, 숫자 포함하여 총4~12자로 입력하시오.";
-            }
-        });
-
-        const userPwdResult = document.querySelector("#userPwd + span");
-        userPwd.addEventListener("input", function(e){
-            //console.log(userPwd.value)
-            console.log(e.target.nextElementSibling)
-            const regExp = /^[!-~]{8,15}$/;
-            //console.log(regExp.test(userPwd.value));
-            if (regExp.test(e.target.value)) {
-                e.target.nextElementSibling.style.color = "green";
-                e.target.nextElementSibling.innerHTML = "OK!"
-            } else {
-                e.target.nextElementSibling.style.color = "red";
-                e.target.nextElementSiblingt.innerHTML = "영문자, 숫자, 특수문자 포함하여 총 8~15자로 입력하시오.";
-            }
-        });
-
-        // userPwd.addEventListener("input", function (e)){
-        //     inputHandler(e, /^[!-~]{8,15}$/, "영문자, 숫자, 특수문자 포함하여 총 8~15자로 입력하시오.");
-
-            
-        //}
-        userPwdCheck.addEventListener("input", function(e){
-            inputHandler(e,userPwdCheck2(), "위의 비밀번호와 일치하게 입력하시오.")
-        })
-        function userNameCheck() {
-            const regExp = /^[가-힣]{2,}$/;
-            return regExp.test(userName.value);
-        }
-        userName.addEventListener("input",function(e){
-            inputHandler(
-                e,
-                userNa,eCheck(),
-                "한글로만 이루어져야되며 2글자이상으로 입력하시오."
-            );
-        });
-
-
-      </script>
-    </form>
+    <script src="../Object/js/실습문제3-2-4.js"></script>
   </body>
 </html>
