--- a/3_JavaScript/Object/실습문제3-2-4.html
+++ b/3_JavaScript/Object/실습문제3-2-4.html
@@ -24,42 +24,47 @@
       form button {
         margin: 6px;
       }
+      form span{
+        display: block;
+        padding-top: 3px;
+        color: #999;
+      }
     </style>
   </head>
   <body>
-    <form action="submit">
+    <form action="" onsubmit="return validate()">
       <div>
-        <label for="userid">* 아이디</label>
-        <input type="text" class="userid" name="userid" />
-        <p>첫글자는 반드시 영문자로, 그리고 영문자, 숫자 포함 총4~12자입력</p>
+        <label for="userId">* 아이디</label>
+        <input type="text" id="userId" name="userId" />
+        <span id="userIdResult">첫글자는 반드시 영문자로, 그리고 영문자, 숫자 포함 총4~12자입력</span>
       </div>
       <div>
-        <label for="userpwd">* 비밀번호</label>
-        <input type="password" class="userpwd" id="userpwd" />
-        <p>영문자, 숫자, 특수문자포함 8~15글자</p>
+        <label for="userPwd">* 비밀번호</label>
+        <input type="password" id="userPwd" id="userPwd" />
+        <span>영문자, 숫자, 특수문자포함 8~15글자</span>
       </div>
       <div>
-        <label for="userpwdcheck">* 비밀번호확인</label>
-        <input type="password" class="userpwdcheck" name="userpwdcheck" />
-        <p>위의 비밀번호 재확인</p>
+        <label for="userPwdCheck">* 비밀번호확인</label>
+        <input type="password" id="userPwdCheck" name="userPwdCheck" />
+        <span>위의 비밀번호 재확인</span>
       </div>
       <div>
-        <label for="">* 이름</label>
-        <input type="text" />
-        <p>한글로만 이루어져야됨. 2글자이상 입력</p>
+        <label for="userName">* 이름</label>
+        <input type="text" id="userName" name="userName"/>
+        <span>한글로만 이루어져야됨. 2글자이상 입력</span>
       </div>
       <div>
-        <label for="">* 이메일</label>
-        <input type="text" />
+        <label for="email">* 이메일</label>
+        <input type="text" id="email" name="email"/>
         <p>이메일입력</p>
       </div>
       <div>
         <label for="">* 취미</label>
-        <input type="text" />
+        <input type="text" placeholder="축구,야구 등"/>
       </div>
       <div>
-        <label for="">* 거주지</label>
-        <select name="" id="">
+        <label for="addr">* 거주지</label>
+        <select name="addr" id="addr">
           <option value="">Kroea</option>
           <option value="">U.S.</option>
           <option value="">Japan</option>
