--- a/3_JavaScript/Object/실습문제3-2-4.html
+++ b/3_JavaScript/Object/실습문제3-2-4.html
@@ -24,7 +24,7 @@
       form button {
         margin: 6px;
       }
-      form span{
+      form span {
         display: block;
         padding-top: 3px;
         color: #999;
@@ -32,35 +32,37 @@
     </style>
   </head>
   <body>
-    <form action="" onsubmit="return validate()">
+    <form action="" onsubmit="return mustcomplete()">
       <div>
         <label for="userId">* 아이디</label>
         <input type="text" id="userId" name="userId" />
-        <span id="userIdResult">첫글자는 반드시 영문자로, 그리고 영문자, 숫자 포함 총4~12자입력</span>
+        <span id="userIdResult"
+          >첫글자는 반드시 영문자로, 그리고 영문자, 숫자 포함 총4~12자입력</span
+        >
       </div>
       <div>
         <label for="userPwd">* 비밀번호</label>
         <input type="password" id="userPwd" id="userPwd" />
-        <span>영문자, 숫자, 특수문자포함 8~15글자</span>
+        <span id="userPwdResult">영문자, 숫자, 특수문자포함 8~15글자</span>
       </div>
       <div>
         <label for="userPwdCheck">* 비밀번호확인</label>
         <input type="password" id="userPwdCheck" name="userPwdCheck" />
-        <span>위의 비밀번호 재확인</span>
+        <span id="userPwdCheckResult">위의 비밀번호 재확인</span>
       </div>
       <div>
         <label for="userName">* 이름</label>
-        <input type="text" id="userName" name="userName"/>
-        <span>한글로만 이루어져야됨. 2글자이상 입력</span>
+        <input type="text" id="userName" name="userName" />
+        <span id="userNameResult">한글로만 이루어져야됨. 2글자이상 입력</span>
       </div>
       <div>
         <label for="email">* 이메일</label>
-        <input type="text" id="email" name="email"/>
-        <p>이메일입력</p>
+        <input type="text" id="email" name="email" />
+        <span id="emailResult">이메일입력</span>
       </div>
       <div>
         <label for="">* 취미</label>
-        <input type="text" placeholder="축구,야구 등"/>
+        <input type="text" placeholder="축구,야구 등" />
       </div>
       <div>
         <label for="addr">* 거주지</label>
