--- a/4_JQuery/semi-practice.html
+++ b/4_JQuery/semi-practice.html
@@ -1,39 +1,162 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>jQuery UI Tabs - Default functionality</title>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-  <script>
-  $( function() {
-    $( "#tabs" ).tabs();
-  } );
-  </script>
-</head>
-<body>
- 
-<div id="tabs">
-  <ul>
-    <li><a href="#tabs-1">Nunc tincidunt</a></li>
-    <li><a href="#tabs-2">Proin dolor</a></li>
-    <li><a href="#tabs-3">Aenean lacinia</a></li>
-  </ul>
-  <div id="tabs-1">
-    <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
-  </div>
-  <div id="tabs-2">
-    <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
-  </div>
-  <div id="tabs-3">
-    <p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.</p>
-    <p>Duis cursus. Maecenas ligula eros, blandit nec, pharetra at, semper at, magna. Nullam ac lacus. Nulla facilisi. Praesent viverra justo vitae neque. Praesent blandit adipiscing velit. Suspendisse potenti. Donec mattis, pede vel pharetra blandit, magna ligula faucibus eros, id euismod lacus dolor eget odio. Nam scelerisque. Donec non libero sed nulla mattis commodo. Ut sagittis. Donec nisi lectus, feugiat porttitor, tempor ac, tempor vitae, pede. Aenean vehicula velit eu tellus interdum rutrum. Maecenas commodo. Pellentesque nec elit. Fusce in lacus. Vivamus a libero vitae lectus hendrerit hendrerit.</p>
-  </div>
-</div>
- 
- 
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Insert title here</title>
+    <link rel="stylesheet" href="../2_CSS/css/reset.css" />
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      .tabs {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 130vh;
+        height: 80vh;
+        padding: 30px 20px;
+        background: #f5f5f5;
+        box-shadow: 5px 5px 10px 5px #ccc;
+        overflow: hidden;
+        margin-left: 300px;
+      }
+      .tabs .tab-header {
+        float: left;
+        width: 180px;
+        height: 100%;
+        border-right: 1px solid #ccc;
+        padding: 50px 0px;
+      }
+      .tabs .tab-header > div {
+        height: 50px;
+        line-height: 50px;
+        font-size: 16px;
+        font-weight: 600;
+        color: #888;
+        cursor: pointer;
+        padding-left: 10px;
+      }
+      .tabs .tab-header > div:hover,
+      .tabs .tab-header > div.active {
+        color: #00acee;
+      }
+      .tabs .tab-header div i {
+        display: inline-block;
+        margin-left: 10px;
+        margin-right: 5px;
+      }
+      .tabs .tab-content {
+        position: relative;
+        height: 100%;
+        overflow: hidden;
+      }
+      .tabs .tab-content > div > i {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        background: #555;
+        color: #f5f5f5;
+        font-size: 25px;
+        font-weight: 600;
+        text-align: center;
+        line-height: 50px;
+        border-radius: 50%;
+      }
+      .tabs .tab-content > div {
+        display: block;
+        position: absolute;
+        text-align: center;
+        padding: 40px 20px;
+        top: -200%;
+        transition: all 500ms ease-in-out;
+      }
+      .tabs .tab-content > div.active {
+        top: 0px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="tabs">
+      <div class="tab-header">
+        <div class="active"><i class="fa fa-code"></i> Code</div>
+        <div><i class="fa fa-pencil-square"></i> About</div>
+        <div><i class="fa fa-bar-chart"></i> Services</div>
+        <div><i class="fa fa-envelope"></i> Contact</div>
+      </div>
+      <div class="tab-indicator"></div>
+      <div class="tab-content">
+        <div class="active">
+          <i class="fa fa-code"></i>
+          <h2>This is code section</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis eum
+            similique quisquam officiis neque, cumque dignissimos architecto
+            nisi totam sapiente eos et illum laborum atque vero ea perferendis
+            consectetur veritatis.
+          </p>
+        </div>
+
+        <div>
+          <i class="fa fa-pencil-square"></i>
+          <h2>This is about section</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis eum
+            similique quisquam officiis neque, cumque dignissimos architecto
+            nisi totam sapiente eos et illum laborum atque vero ea perferendis
+            consectetur veritatis.
+          </p>
+        </div>
+
+        <div>
+          <i class="fa fa-bar-chart"></i>
+          <h2>This is services section</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis eum
+            similique quisquam officiis neque, cumque dignissimos architecto
+            nisi totam sapiente eos et illum laborum atque vero ea perferendis
+            consectetur veritatis.
+          </p>
+        </div>
+
+        <div>
+          <i class="fa fa-envelope"></i>
+          <h2>This is contact section</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis eum
+            similique quisquam officiis neque, cumque dignissimos architecto
+            nisi totam sapiente eos et illum laborum atque vero ea perferendis
+            consectetur veritatis.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      function _class(name) {
+        return document.getElementsByClassName(name);
+      }
+
+      let tabPanes = _class("tab-header")[0].getElementsByTagName("div");
+
+      for (let i = 0; i < tabPanes.length; i++) {
+        tabPanes[i].addEventListener("click", function () {
+          console.log(tabPanes[i]);
+          _class("tab-header")[0]
+            .getElementsByClassName("active")[0]
+            .classList.remove("active");
+          tabPanes[i].classList.add("active");
+
+          _class("tab-indicator")[0].style.top = `calc(80px + ${i * 50}px)`;
+
+          _class("tab-content")[0]
+            .getElementsByClassName("active")[0]
+            .classList.remove("active");
+          _class("tab-content")[0]
+            .getElementsByTagName("div")
+            [i].classList.add("active");
+        });
+      }
+    </script>
+  </body>
 </html>
