--- a/4_JQuery/04_이벤트.html
+++ b/4_JQuery/04_이벤트.html
@@ -39,6 +39,22 @@
       <textarea id="textarea2" cols="70" rows="5"></textarea>
     </div>
 
+    <h3>동적으로 아이디 조건 확인</h3>
+    <p>
+      -첫 글자는 반드시 영문 소문자<br />
+      - 영문 소문자와 숫자로만 이루어 진다<br />
+      - 총 4 ~ 12글자
+    </p>
+    <label for="userId">아이디 : </label>
+    <input type="text" id="userId" />
+    <span id="idcheck"></span>
+
+    <h2>3. trigger() 메서드</h2>
+    <div id="area3" class="area">
+      Clicked Number : <span id="counter2">0</span>
+    </div>
+    <button id="btn">실행확인</button>
+
     <script src="js/04_이벤트.js"></script>
   </body>
 </html>
