<feat> 드래그 가능한 카드 만들기 틀

--- a/Shake_Effect/test01.html
+++ b/Shake_Effect/test01.html
@@ -23,7 +23,7 @@
 <div id="pigeon"></div>
  
 <script>
-$( document ).mouseenter(function() {
+$( document ).click(function() {
   $( "#pigeon" ).effect( "shake" );
 });
 </script>
