--- a/Write_Form/writeEx.html
+++ b/Write_Form/writeEx.html
@@ -48,7 +48,7 @@
     </script>
   </body>
 </html> -->
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -79,4 +79,26 @@
       <button type="submit" class="btn btn-secondary mb-3">제출하기</button>
     </form>
   </body>
+</html> -->
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    div#editor {
+        padding: 16px 24px;
+          border: 1px solid #D6D6D6;
+          border-radius: 4px;
+      }
+  </style>
+</head>
+<body>
+  <div id="editor" contenteditable="true"></div>
+
+</body>
 </html>
