--- a/Write_Form/writeEx.html
+++ b/Write_Form/writeEx.html
@@ -1,5 +1,5 @@
 <!-- fully generated -->
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -24,7 +24,7 @@
         });
       </script>
   </body>
-</html> -->
+</html>
 
 <!-- partialy generated-->
 <!-- <!DOCTYPE html>
@@ -82,7 +82,7 @@
 </html> -->
 
 
-
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -101,4 +101,4 @@
   <div id="editor" contenteditable="true"></div>
 
 </body>
-</html>
+</html> -->
